Update GoogleDriveService and application properties